--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- main css-->
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="logo">
-          <a href="#"> T&E</a>
+          <a href="#"> the Orimoloye</a>
         </div>
         <div class="nav"> 
           <ul>
@@ -29,6 +29,8 @@
  </header>
 
   <!-- header end -->  
+
+
 
   <!-- home section start-->
    <section id="one" class="home-section">
@@ -49,19 +51,21 @@
                April 23, 2022</h3>
              </div> 
           </div>
+
           </div>
           </div>
          </div>
        </div>
-    
 
+
+    
      <section id="two" class="our-story">
       <div class="container">
         <div class="row">
-          <center>
-            <img src="/static/border.png" height="100" width="500">
-            <img src="/static/border.png" height="100" width="500">
-            <h1> OUR STORY . . .</h1>
+       <div class="sticker">
+  Our Story 
+  </div>
+            
           <div class="wrap-content">
             <div class="left-content">
               <img src="/static/his01.jpg" height="300" alt="His Persepective">
@@ -89,8 +93,7 @@
             </p>
           </div>
         </div>
-         <img src="/static/border.png" height="100" width="500">
-            <img src="/static/border.png" height="100" width="500"> </center>
+
       </div>
      </section>  
 
@@ -122,6 +125,7 @@
 </div>
 </div>
 </section>
+
 </section>
 </body>
 </html>
